--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@
 # + in components/constants.js have base_url constant 
 
 # development BASE_URL
-BASE_URL="https://redautorent.ee/"
+BASE_URL="http://test.smatttech.com/"
 
 # next-auth 
-NEXT_PUBLIC_BASE_URL="https://redautorent.ee/"
-NEXTAUTH_URL="https://redautorent.ee/"
+NEXT_PUBLIC_BASE_URL="http://test.smatttech.com/"
+NEXTAUTH_URL="http://test.smatttech.com/"
 
 # # test server BASE_URL
 # BASE_URL="http://redautorent.ee/"
