--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "rentcar",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "14.17.6",
-    "npm": "6.14.13"
-  },
   "scripts": {
     "mydev": "next dev -p 3344",
     "export": "next build && next export",
@@ -16,28 +12,26 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^0.4.4",
-    "@prisma/client": "^4.5.0",
+    "@prisma/client": "^2.23.0",
     "axios": "^0.21.1",
     "base64-img": "^1.0.1",
-    "cloudinary": "^1.40.0",
-    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "date-fns": "^2.21.3",
     "express": "^4.17.1",
+    "n": "^7.3.0",
+    "next": "^10.2.3",
     "next-auth": "^3.24.0",
     "nodemailer": "^6.6.1",
-    "prisma": "^4.5.0",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-cookie": "^4.0.3",
     "react-datepicker": "^3.8.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-responsive": "^8.2.0",
     "react-transition-group": "^4.4.1",
     "sass": "^1.32.11",
-    "swiper": "^6.6.2",
-    "uuid": "^8.3.2"
+    "swiper": "^6.6.2"
   },
   "devDependencies": {
-    "next": "^11.1.4"
+    "prisma": "^2.23.0"
   }
 }
