--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "base64-img": "^1.0.1",
     "cross-env": "^7.0.3",
+    "cloudinary": "^1.40.0",
     "date-fns": "^2.21.3",
     "express": "^4.17.1",
     "n": "^7.3.0",
