--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@prisma/client": "^2.23.0",
     "axios": "^0.21.1",
     "base64-img": "^1.0.1",
-    "cross-env": "^7.0.3",
     "cloudinary": "^1.40.0",
+    "cross-env": "^7.0.3",
     "date-fns": "^2.21.3",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "n": "^7.3.0",
     "next": "^10.2.3",
     "next-auth": "^3.24.0",
