--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^2.21.3",
     "express": "^4.17.1",
     "n": "^7.3.0",
+    "next": "^11.1.4",
     "next-auth": "^3.24.0",
     "nodemailer": "^6.6.1",
     "prisma": "^4.5.0",
