--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ NEXTAUTH_USERNAME="admin"
 NEXTAUTH_PASSWORD="Bulldozer007"
 
 # GMAIL 
-GMAIL_USERNAME="redautorentestonia@gmail.com"
-GMAIL_PASSWORD="Qa12as23fvcx"
+GMAIL_USERNAME="redautorent@gmail.com"
+GMAIL_PASSWORD="qvuxbbsizvogukqi"
 
 #GMAIL HOST
 GMAIL_HOST="smtp.gmail.com"
